Logo margins to stop overlap

--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -15,6 +15,7 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  margin: 30px auto 20px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
